goreleaser: update example image tags to match version being released
Signed-off-by: Steve Kriss <steve@heptio.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,6 +13,9 @@
 # limitations under the License.
 
 dist: _output
+before:
+  hooks:
+    - ./hack/set-example-tags.sh
 builds:
   - main: ./cmd/ark/main.go
     env:
@@ -41,7 +44,7 @@ archive:
   name_template: "{{ .ProjectName }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}"
   files:
     - LICENSE
-    - examples/**/*
+    - config/**/*
 checksum:
   name_template: 'CHECKSUM'
 snapshot:
